# constr

./: CMakeLists.txt  README.md  conanfile.py
.docker/: Dockerfile.base  Dockerfile.clang  Dockerfile.gcc  Dockerfile.msvc
.github/workflows/: cmake.yml
cmake/in/: constrConfig.cmake.in
docs/: CONTRIBUTING.md
include/constr/: constr.hpp  fwd.hpp  string.hpp  string_algo.hpp  string_fixed.hpp  string_fixed.inl  string_util.hpp  string_util.inl  string_view.hpp  string_view.inl
include/constr/config/: macro.hpp  version.hpp
scripts/: clang-start.sh  create.sh  gcc-start.sh
src/constr/: string.cpp  string_view.cpp
test/: CMakeLists.txt  test_lib.cpp
test/constr/: string.cpp
test_package/: conanfile.py  example.cpp
